ocaml-batteries (0.20090401+gitE192725-1) unstable; urgency=low

  * new snapshot, upstream Git commit E192725
    - includes all changes of batteries approaching beta 1
  * debian/rules:
    - pass -byte-plugin to ocamlbuild when ocamlopt is not
      available, fixes FTBFS on non-native archs. (Closes: #505490)
    - use ocaml.mk as a CDBS "rules" snippet
  * debian/control:
    - add new build-dep on ocamlnet (Closes: #515792)

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 01 Apr 2009 15:38:37 +0200

ocaml-batteries (0.20081112+gitBB342A7-1) experimental; urgency=low

  * new snapshot, now following upstream Git
    (commit bb342a7, i.e., alpha 2 + minor bugfixes)
  * debian/patches:
    - remote patch features/flexi-build (integrated upstream)
  * debian/control: correct spelling of "metapackage"
  * debian/control: fix sections: -dev in libdevel, -doc in doc
  * debian/rules: port to new upstream, which is now using autotools
  * debian/rules: specify the clean target
  * symlink more doc files from /usr/share/doc/*-dev/ to *-doc/
  * ship /usr/bin/ocaml-batteries (fancier top-level wrapper)
  * debian/rules: do not compress myocamlbuild.ml, to ease its usage
  * debian/patches: new patch fixes/consistent-docroot to look for *.idex
    in the appropriate dir
  * debian/patches: new patch debian/missing-doc, suggest to install -doc
    package when trying to access it from enhanced top-level
  * add README.Debian, pointing out /usr/bin/ocaml-batteries
  * debian/control: suggest ledit, useful with ocaml-batteries
  * debian/control: add (Build-)Depends on camlzip and bin-prot

 -- Stefano Zacchiroli <zack@debian.org>  Tue, 11 Nov 2008 20:55:58 +0100

ocaml-batteries (0.20081011-1) experimental; urgency=low

  * Initial release (Closes: #501914)

 -- Stefano Zacchiroli <zack@debian.org>  Mon, 13 Oct 2008 18:55:31 +0200